[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/sniper.png" type="Texture" id=1]
[ext_resource path="res://sniper.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/shoot_sound2.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/ping_sound.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 256.0

[node name="Sniper" type="Node2D"]
script = ExtResource( 2 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 1 )
hframes = 5
vframes = 2
frame = 9

[node name="Gun" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
offset = Vector2( 2, 0.5 )
hframes = 5
vframes = 2

[node name="MuzzlePos" type="Position2D" parent="Gun"]
position = Vector2( 6, -0.5 )

[node name="PlayerSensor" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor"]
shape = SubResource( 1 )

[node name="LockonTimer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="LockonSoundTimer" type="Timer" parent="."]

[node name="ShootDelayTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Beam" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 10, 0 )
width = 1.0
default_color = Color( 1, 0, 0, 1 )

[node name="FadeTimer" type="Timer" parent="Beam"]
wait_time = 0.25
one_shot = true

[node name="BeamParent" type="Node" parent="."]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
bus = "Effects"

[node name="LockonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
bus = "Effects"

[connection signal="body_entered" from="PlayerSensor" to="." method="_on_PlayerSensor_body_entered"]
[connection signal="timeout" from="LockonTimer" to="." method="_on_LockonTimer_timeout"]
[connection signal="timeout" from="LockonSoundTimer" to="." method="_on_LockonSoundTimer_timeout"]
[connection signal="timeout" from="ShootDelayTimer" to="." method="_on_ShootDelayTimer_timeout"]
[connection signal="timeout" from="Beam/FadeTimer" to="." method="_on_FadeTimer_timeout"]
